  it may have been deleted without applying the induced bound, if the change was too small, this is now forced
- fixed potential wrong locks update after a varbound constraint became redundant in coefficient tightening
- fixed potentially wrong cleanup of fixed variables in nonlinear constraint handler

performance improvements:
- widened a bottleneck in simplifying long signomial sums in a nonlinear constraint
- sorting of parents and children for some expression types is now independent of memory layout
- unified and extended code that improves numerics of cuts generated by nonlinear constraint handlers

interface:
- new function SCIPvalidateSolve() to compare solving result with an external primal and dual reference
  value
- new function SCIPisObjChangedProbing() to check whether the objective function has changed during probing mode
- new function SCIPgetDualSolVal() to get the dual solution value of a constraint
- new functions SCIPisLPPrimalReliable() and SCIPisLPDualReliable() to check whether the current primal / dual LP solution
  were successfully checked for feasibility

testing:
- added make options for specifying EXECUTABLE and OUTPUTDIR variables for the make test target

SCIP version 4.0.0
==================

features:
- new Graph induced neighborhood search (GINS) primal heuristic that uses neighborhoods
  based on distances in the variable constraint connectivity graph.
  In addition, the heuristic supports a rolling horizon-like procedure to solve auxiliary problems
  for neighborhoods with increasing distance from the starting neighborhood.
- new primal heuristic LP face that tries to find an integer solution inside the optimal LP face.
- implemented linear time methods for (weighted) median selection for joint arrays of various types
- new statistic computed: "Root LP Estimate" that shows the root LP best-estimate with every pseudo-cost update