@@ -3995,11 +3995,14 @@ SCIP_RETCODE SCIPlpiGetBase(
    SCIP_CALL( SCIPlpiGetNRows(lpi, &nrows) );
    SCIP_CALL( SCIPlpiGetNCols(lpi, &ncols) );
 
-   if( rstat != 0 )
+   if( rstat != NULL )
    {
       int i;
 
+      SCIP_CALL( ensureSidechgMem(lpi, nrows) );
+
       CHECK_ZERO( lpi->messagehdlr, GRBgetintattrarray(lpi->grbmodel, GRB_INT_ATTR_CBASIS, 0, nrows, rstat) );
+      CHECK_ZERO( lpi->messagehdlr, GRBgetcharattrarray(lpi->grbmodel, GRB_CHAR_ATTR_SENSE, 0, nrows, lpi->senarray) );
 
       for( i = 0; i < nrows; ++i )
       {
@@ -4011,30 +4014,56 @@ SCIP_RETCODE SCIPlpiGetBase(
             idx = ncols + lpi->rngrowmap[i];
             assert(lpi->rngrowmap[i] < lpi->nrngrows);
             CHECK_ZERO( lpi->messagehdlr, GRBgetintattrelement(lpi->grbmodel, GRB_INT_ATTR_VBASIS, idx, &rstat[i]) );
+
+            switch( rstat[i] )
+            {
+            case GRB_BASIC:
+               rstat[i] = (int) SCIP_BASESTAT_BASIC;
+               break;
+
+            case GRB_NONBASIC_LOWER:
+               rstat[i] = (int) SCIP_BASESTAT_LOWER;
+               break;
+
+            case GRB_NONBASIC_UPPER:
+               rstat[i] = (int) SCIP_BASESTAT_UPPER;
+               break;
+
+               /*lint -fallthrough*/
+            case GRB_SUPERBASIC:
+            default:
+               SCIPerrorMessage("invalid basis status %d for ranged row.\n", rstat[i]);
+               SCIPABORT();
+               return SCIP_INVALIDDATA; /*lint !e527*/
+            }
          }
-
-         switch( rstat[i] )
+         else
          {
-         case GRB_BASIC:
-            rstat[i] = (int) SCIP_BASESTAT_BASIC;
-            break;
+            /* Slack variables can only be basic or at their lower bounds in Gurobi. */
+            switch( rstat[i] )
+            {
+            case GRB_BASIC:
+               rstat[i] = (int) SCIP_BASESTAT_BASIC;
+               break;
 
-         case GRB_NONBASIC_LOWER:
-            rstat[i] = (int) SCIP_BASESTAT_LOWER;
-            break;
+            case GRB_NONBASIC_LOWER:
+               if ( lpi->senarray[i] == '>' || lpi->senarray[i] == '=' )
+                  rstat[i] = (int) SCIP_BASESTAT_LOWER;
+               else
+               {
+                  assert( lpi->senarray[i] == '<' );
+                  rstat[i] = (int) SCIP_BASESTAT_UPPER;
+               }
+               break;
 
-         case GRB_NONBASIC_UPPER:
-            rstat[i] = (int) SCIP_BASESTAT_UPPER;
-            break;
-
-         case GRB_SUPERBASIC:
-            rstat[i] = (int) SCIP_BASESTAT_ZERO;
-            break;
-
-         default:
-            SCIPerrorMessage("invalid basis status %d\n", rstat[i]);
-            SCIPABORT();
-            return SCIP_INVALIDDATA; /*lint !e527*/
+               /*lint -fallthrough*/
+            case GRB_NONBASIC_UPPER:
+            case GRB_SUPERBASIC:
+            default:
+               SCIPerrorMessage("invalid basis status %d for row.\n", rstat[i]);
+               SCIPABORT();
+               return SCIP_INVALIDDATA; /*lint !e527*/
+            }
          }
       }
    }
@@ -4060,12 +4089,13 @@ SCIP_RETCODE SCIPlpiGetBase(
          case GRB_NONBASIC_UPPER:
             cstat[j] = (int) SCIP_BASESTAT_UPPER;
             break;
+
          case GRB_SUPERBASIC:
             cstat[j] = (int) SCIP_BASESTAT_ZERO;
             break;
 
          default:
-            SCIPerrorMessage("invalid basis status %d\n", cstat[j]);
+            SCIPerrorMessage("invalid basis status %d for column.\n", cstat[j]);
             SCIPABORT();
             return SCIP_INVALIDDATA; /*lint !e527*/
          }
@@ -4105,35 +4135,11 @@ SCIP_RETCODE SCIPlpiSetBase(
 
    for( i = 0; i < nrows; ++i )
    {
-      switch( rstat[i] )
-      {
-      case SCIP_BASESTAT_BASIC:
-         lpi->rstat[i] = GRB_BASIC;
-         break;
-
-      case SCIP_BASESTAT_LOWER:
-         lpi->rstat[i] = GRB_NONBASIC_LOWER;
-         break;
-
-      case SCIP_BASESTAT_UPPER:
-         lpi->rstat[i] = GRB_NONBASIC_UPPER;
-         break;
-
-      case SCIP_BASESTAT_ZERO:
-         lpi->rstat[i] = GRB_SUPERBASIC;
-         break;
-
-      default:
-         SCIPerrorMessage("invalid basis status %d\n", rstat[i]);
-         SCIPABORT();
-         return SCIP_INVALIDDATA; /*lint !e527*/
-      }
-
       if ( lpi->rngrowmap != NULL && lpi->rngrowmap[i] >= 0 )
       {
-         /* set basis status of corresponding range variable; ranged row is always non-basic */
          int idx;
 
+         /* set basis status of corresponding range variable; ranged row is always non-basic */
          idx = ncols + lpi->rngrowmap[i];
          assert(lpi->rngrowmap[i] < lpi->nrngrows);
          lpi->cstat[idx] = lpi->rstat[i];
@@ -4141,6 +4147,44 @@ SCIP_RETCODE SCIPlpiSetBase(
 #ifndef NDEBUG
          nrngsfound++;
 #endif
+      }
+      else
+      {
+         switch( rstat[i] )
+         {
+         case SCIP_BASESTAT_BASIC:
+            lpi->rstat[i] = GRB_BASIC;
+            break;
+
+         case SCIP_BASESTAT_UPPER:
+         {
+#ifndef NDEBUG
+            char sense;
+            CHECK_ZERO( lpi->messagehdlr, GRBgetcharattrarray(lpi->grbmodel, GRB_CHAR_ATTR_SENSE, i, 1, &sense) );
+            assert( sense == '<' );
+#endif
+            /* Slack variables can only be basic or at their lower bounds in Gurobi. */
+            lpi->rstat[i] = GRB_NONBASIC_LOWER;
+            break;
+         }
+
+         case SCIP_BASESTAT_LOWER:
+         {
+#ifndef NDEBUG
+            char sense;
+            CHECK_ZERO( lpi->messagehdlr, GRBgetcharattrarray(lpi->grbmodel, GRB_CHAR_ATTR_SENSE, i, 1, &sense) );
+            assert( sense == '>' || sense == '=' );
+#endif
+            lpi->rstat[i] = GRB_NONBASIC_LOWER;
+            break;
+         }
+
+         case SCIP_BASESTAT_ZERO:
+         default:
+            SCIPerrorMessage("invalid basis status %d for row.\n", rstat[i]);
+            SCIPABORT();
+            return SCIP_INVALIDDATA; /*lint !e527*/
+         }
       }
    }
 
@@ -5121,7 +5165,10 @@ SCIP_RETCODE SCIPlpiSetIntpar(
    case SCIP_LPPAR_LPINFO:
       assert(ival == TRUE || ival == FALSE);
       if( ival )
+      {
          SCIP_CALL( setIntParam(lpi, GRB_INT_PAR_OUTPUTFLAG, 1) );
+         SCIP_CALL( setIntParam(lpi, GRB_INT_PAR_LOGTOCONSOLE, 1) );
+      }
       else
          SCIP_CALL( setIntParam(lpi, GRB_INT_PAR_OUTPUTFLAG, 0) );
       break;
