@@ -48,6 +48,7 @@ fixed bugs:
   it may have been deleted without applying the induced bound, if the change was too small, this is now forced
 - fixed potential wrong locks update after a varbound constraint became redundant in coefficient tightening
 - fixed potentially wrong cleanup of fixed variables in nonlinear constraint handler
+- fixed wrong handling of row basis status in lpi_grb.c
 
 performance improvements:
 - widened a bottleneck in simplifying long signomial sums in a nonlinear constraint
